--- a/app/partials/admin.html
+++ b/app/partials/admin.html
@@ -1,4 +1,10 @@
-<form ng-submit="addHouse()" class="form-inline order-form">
+    <style>
+     body {
+        padding-top: 50px;
+     }
+      
+    </style>
+<form ng-submit="addHouse()" class="form-inline point-form">
     <div class="form-group">
         <label class="sr-only" for="houseName">House name</label>
         <input ng-model="newHouse.name" type="text" class="form-control" id="houseName">
@@ -9,9 +15,8 @@
     </div>
     <button type="submit" class="btn btn-primary">Add House</button>
 </form>
-<br/>
-<form ng-repeat="house in houses" ng-submit="sendPoints(house)" class="form-inline order-form">
-    <div class="form-group">
+<form id="pointform" ng-repeat="house in houses" ng-submit="sendPoints(house)" class="form-inline point-form">
+    <div class="form-group point-form" >
        <div> <label for="houseName" class="sr-only">House</label>{{ house.name }}</div>
         <div><input ng-model="house.amount" type="number" id="houseName" class="form-control">
     
