--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,7 +1,8 @@
 html,
 body {
-background-color: #1D242C;
 }
+
+@import url(http://fonts.googleapis.com/css?family=Fanwood+Text);
 
 #wrap {
   min-height: 100%;
@@ -42,10 +43,8 @@ background-color: #1D242C;
 }
 
 
-.center-row {
-  height:100%;
-  width:100%;
-  display: table-row;
+.row {
+  margin-top: 120px;
 }
   
 .center-row > div {
@@ -81,14 +80,21 @@ padding-top: 150px;
 /*styles header*/
 .display-header
 {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    height: 90px;
-font-size: 50px;
+    font-family: 'Fanwood Text', serif;
+    height: 120px;
+    font-size: 190px;
     font-weight: 500;
     margin-left: 0;
-    background-color: #1D242C;
     opacity: 100%;
-    padding-top: 35px;
+    padding-top: 202px;
+    background: url(/img/stardust.png);
+
+}
+
+.display-header img
+{
+   display: inline;
+
 }
 
 /*styles text in score form
