Continued work on grid styles

--- a/app/partials/scoreboard.html
+++ b/app/partials/scoreboard.html
@@ -19,57 +19,50 @@
     background: url(/img/stardust.png);
     opacity: 100%;
 }
-
 body {
     margin: 0px;
     padding-top: 17em;
     background: url(/img/stardust.png);
 }
-
 .row {
     background: rgba(25, 25, 25, 0);
-
 }
 .thumbnail {
     color: #fff;
     background: rgba(25, 25, 25, 0);
     border: 0px;
     box-shadow: 0px;
-    margin-bottom: 0px;    
+    margin-bottom: 0px;
 }
-
 .thumbnail h1 {
     font-family: 'Fanwood Text', serif;
     font-size: 7em;
     font-weight: 500;
 }
-
 .house-name {
     font-family: 'Fanwood Text', serif;
     color: #fff;
 }
-
 .house-name h2 {
     color: #fff;
     font-size: 40px;
 }
-
 </style>
 
 <div class="row">
-    <div ng-repeat="house in houses" class="col-md-3">
+    <div ng-repeat="house in houses" class="col-sm-3 col-lg-3">
         <div class="thumbnail text-center">
-             <h1>{{ house.totalPoints }}</h1>
-            <img ng-src="/img/{{house.name}}.png"/>
+            <h1>{{ house.totalPoints }}</h1>
+            <img ng-src="/img/{{house.name}}.png" />
         </div>
     </div>
-    <div ng-repeat="house in houses" class="col-md-3">
+    <div ng-repeat="house in houses" class="col-sm-3 col-lg-3">
         <div class="text-center house-name">
-             <h2>{{ house.name }}</h2>
+            <h2>{{ house.name }}</h2>
         </div>
     </div>
 </div>
-    
+
 <!-- Old score grid
 <div class="center-container">
     <div class="center-row crest">
