--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,102 +1,82 @@
-html,
-body {
-}
-
-@import url(http://fonts.googleapis.com/css?family=Fanwood+Text);
-
+html, body {} @import url(http://fonts.googleapis.com/css?family=Fanwood+Text);
 #wrap {
-  min-height: 100%;
-  height: 100%;
-  /* Negative indent footer by its height */
-  margin: 0 auto -82px 0;
-  /* Pad bottom by footer height */
-  padding: 0 0 80px 0;
+    min-height: 100%;
+    height: 100%;
+    /* Negative indent footer by its height */
+    
+    margin: 0 auto -82px 0;
+    /* Pad bottom by footer height */
+    
+    padding: 0 0 80px 0;
 }
-
 /* Set the fixed height of the footer here */
+
 #footer {
-  height: 80px;
-  background-color: #f5f5f5;
+    height: 80px;
+    background-color: #f5f5f5;
 }
-
-
 #wrap > .center-container {
-  padding: 50px 0 0 0;
-  margin:0;
-  height: 100%;
+    padding: 50px 0 0 0;
+    margin: 0;
+    height: 100%;
 }
-
 #footer > .container {
-  padding-top:5px
-  padding-left: 15px;
-  padding-right: 15px;
+    padding-top: 5px padding-left: 15px;
+    padding-right: 15px;
 }
-
 .center-container {
-  display: table;
-  width:100%;
-  margin:0;
+    display: table;
+    width: 100%;
+    margin: 0;
 }
-
 .ng-scope {
-  height: 100%;
+    height: 100%;
 }
-
-
 .row {
-  margin-top: 120px;
+    margin-top: -60px;
 }
-  
-.center-row > div {
+/*.row > div {
   height:100%;
   width:25%;
   display: table-cell;
   border:0 solid #eee;
   color:#fff;
   vertical-align:middle;
-  /*background:#efefef url('/assets/img/example.jpg');*/
+  /*background:#efefef url('/assets/img/example.jpg');
 
-}
-
+*/
+/*
 .center-row > div > h5 {
 font-size: 39px;
 }
 .center-row > div > h2 {
 font-size: 7em;
 padding-top: 150px;
-}
-
+}*/
 /*centers the headline*/
-.navbar-brand
-{
+
+.navbar-brand {
     position: absolute;
     width: 100%;
     left: 0;
     text-align: center;
     /*margin: auto;*/
-
 }
-
 /*styles header*/
-.display-header
-{
+
+.display-header {
     font-family: 'Fanwood Text', serif;
     height: 120px;
-    font-size: 190px;
+    font-size: 155px;
     font-weight: 500;
     margin-left: 0;
     opacity: 100%;
-    padding-top: 202px;
+    padding-top: 100px;
     background: url(/img/stardust.png);
-
 }
-
-.display-header img
-{
-   display: inline;
-
+.display-header img {
+    display: inline;
 }
-
 /*styles text in score form
 .point-form {
   color:;
