--- a/app/css/app.css
+++ b/app/css/app.css
@@ -68,3 +68,5 @@ fieldset {
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
     display: none !important;
 }
+
+/*congrats notification css*/
