Fixed notification call

--- a/app/partials/scoreboard.html
+++ b/app/partials/scoreboard.html
@@ -130,8 +130,8 @@ body {
 
 </style>
 <div class="container" id="toast-container">
-<div class="check-element -show-hide notification-div" ng-class="notifications.last" ng-show="notifications.first" style="clear:both;">
-    <p class="text-center">{{notifications.qty}} points for {{notifications.last}}!</p>
+<div class="check-element -show-hide notification-div" ng-class="notifications.name" ng-show="notifications.show" style="clear:both;">
+    <p class="text-center">{{notifications.newcount}} points for {{notifications.name}}!</p>
 </div>
 </div>
 <div class="text-center display-header" style="color: white">HOUSE CUP</a></div>
