Temporarily saving new points via $http

--- a/app/partials/admin.html
+++ b/app/partials/admin.html
@@ -31,3 +31,4 @@ body {
         </div>
     </div>
 </form>
+      <button type="button" class="btn btn-success btn-circle btn-xl" ng-click="sendPoints2()">sdf</button>
