--- a/app/partials/admin.html
+++ b/app/partials/admin.html
@@ -1,13 +1,13 @@
 <style>
 body {
-    padding-top: 150px;
+    padding-top: 75px;
 }
 
 
 
 </style>
 
-<form ng-submit="addHouse()" class="form-inline point-form">
+<!-- <form ng-submit="addHouse()" class="form-inline point-form">
     <div class="form-group">
         <label class="sr-only" for="houseName">House name</label>
         <input ng-model="newHouse.name" type="text" class="form-control" id="houseName">
@@ -18,17 +18,16 @@ body {
     </div>
     <button type="submit" class="btn btn-primary">Add House</button>
 </form>
+ -->
 
-
-<form id="pointform" ng-repeat="house in houses" ng-submit="sendPoints(house)" class="form-inline point-form">
+<form id="pointform" ng-repeat="team in teams" ng-submit="sendPoints(team)" class="form-inline point-form">
     <div class="form-group point-form">
         <div>
-            <label for="houseName" class="sr-only">House</label>{{ house.name }}</div>
+            <label for="teamName" class="sr-only">House</label>{{ team.name }}</div>
         <div>
-            <input ng-model="house.amount" type="number" id="houseName" class="form-control">
+            <input ng-model="team.amount" type="number" id="teamName" class="form-control">
 
             <button type="submit" class="btn btn-primary">Add</button>
         </div>
     </div>
 </form>
-      <button type="button" class="btn btn-success btn-circle btn-xl" ng-click="sendPoints2()">sdf</button>
